Fixes white right stripe on mobile display

--- a/css/kaka.css
+++ b/css/kaka.css
@@ -2,12 +2,16 @@
 KAKA LITIERE CSS
 **/
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   font-size: 1em;
   color: #161819;
   font-family: 'Lato', Helvetica, sans-serif;
   font-weight: 400;
-  margin: 0
+  margin: 0;
 }
 
 h1, h2, h3, h4 {
